2012-11-12  Bin Cheng  <bin.cheng@arm.com>

	* gcse.c (struct bb_data): Add new fields, old_pressure, live_in
	and backup.
	(get_regno_pressure_class): Add prototype.
	(update_bb_reg_pressure): New.
	(should_hoist_expr_to_dom): Add new parameter from.
	Monitor the change of reg pressure and use it to drive hoisting.
	(hoist_code): Update LIVE and reg pressure information.
	(calculate_bb_reg_pressure): Initialize live_in and backup.

2012-11-12  Oleg Endo  <olegendo@gcc.gnu.org>

	* doc/md.texi (Standard Pattern Names For Generation): Fix swapped
	sine and cosine operands in the sincos description.

2012-11-12  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/53512
	* config/sh/sh.md (sincossf3): Fix swapped sin and cos operands.

2012-11-11  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md (*movti_internal_rex64): Remove "!" from
	riF->o alternative.

2012-11-11  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.h (AS_NIAGARA3_FLAG): Tweak.
	* config/sparc/sol2.h (TARGET_CPU_niagara4 support): Fix pasto.

2012-11-11  Eric Botcazou  <ebotcazou@adacore.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/55247
	PR middle-end/55259
	* emit-rtl.c (adjust_address_1): If POINTERS_EXTEND_UNSIGNED > 0,
	handle ZERO_EXTEND.
	* recog.c (offsettable_address_addr_space_p): Likewise.

2012-11-11  Steven Bosscher  <steven@gcc.gnu.org>

	PR middle-end/55263
	* postreload.c (rest_of_handle_postreload): With non-call exceptions,
	if edges are purged call cleanup_cfg to remove unreachable blocks.

2012-11-11  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/extend.texi: Copy-edit to use "built-in function" instead
	of "builtin", per GCC coding standards.  Also use consistent
	capitalization in titles of sections describing built-in functions.

2012-11-11  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/55238
	* ipa-cp.c (agg_pass_through_permissible_p): New function.
	(propagate_aggs_accross_jump_function): Use it.